# UTPass

./: .astylerc  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Email Request  FEATURES.MD  LICENSE  README.md  UTPass.apparmor  UTPass.contenthub  UTPass.desktop.in  clickable.json  clickable.yaml  main.cpp  main.in.cpp  manifest.json.in  tests.in.cpp
.github/: FUNDING.yml
cmake/: FindJSON-C.cmake
libs/gpg/: CMakeLists.txt  clean.sh
plugins/: CMakeLists.txt
plugins/FileSystem/: CMakeLists.txt  filesystem.cpp  filesystem.h  plugin.cpp  plugin.h  qmldir
plugins/Git/: CMakeLists.txt  error.h  git.cpp  git.h  libgit.cpp  libgit.h  plugin.cpp  plugin.h  qmldir  utils.h
plugins/Git/jobs/: clonejob.cpp  clonejob.h  gitjob.cpp  gitjob.h
plugins/Gpg/: CMakeLists.txt  gpg.cpp  gpg.h  plugin.cpp  plugin.h  qmldir
plugins/Pass/: CMakeLists.txt  error.h  git.cpp  git.h  gpg.cpp  gpg.h  pass.cpp  pass.h  passkeymodel.h  passkeyringmodel.h  passphraseprovider.h  passphraseprovider2.h  passphraseprovider_tobedeleted.h  plugin.cpp  plugin.h  qmldir
plugins/Pass/jobs/: decryptjob.cpp  decryptjob.h  deletekeyjob.cpp  deletekeyjob.h  getkeysjob.cpp  getkeysjob.h  importkeyjob.cpp  importkeyjob.h  rmjob.cpp  rmjob.h  rnpjob.cpp  rnpjob.h
plugins/Utils/: CMakeLists.txt  plugin.cpp  plugin.h  utils.cpp  utils.h
plugins/Utils/jobs/: unzipjob.cpp  unzipjob.h
po/: CMakeLists.txt  ca.po  es.po  fr.po  nl.po  utpass.qrouland.pot
qml/: Main.qml
qml/components/: CopyText.qml  ExternalLink.qml  FileDir.qml  GitCloneHttp.qml  GitCloneHttpAuth.qml  GitCloneSshKey.qml  ImportFile.qml  Link.qml  PageStackLink.qml  Search.qml  ViewFileDir.qml  qmldir
qml/dialogs/: DoubleValidationDialog.qml  ErrorDialog.qml  PassphraseDialog.qml  SimpleValidationDialog.qml  SuccessDialog.qml
qml/models/: Manifest.qml  PasswordStore.qml  qmldir
qml/pages/: Info.qml  Password.qml  PasswordList.qml  Settings.qml  qmldir
qml/pages/headers/: MainHeader.qml  StackHeader.qml  qmldir
qml/pages/settings/: DeleteRepo.qml  ImportGitClone.qml  ImportKeyFile.qml  ImportSSHkey.qml  ImportZip.qml  InfoKeys.qml  Settings.qml
qml/pages/settings/git/: GitCloneHttp.qml  GitCloneHttpAuth.qml  GitModeOptionSelector.qml  ImportGitClone.qml
qml/settings/: GitSettings.qml  qmldir
qml/styles/: CustomBorder.qml  Theme.qml  qmldir
tests/assets/gpg/: clear_text.txt.gpg  passphrase.txt  test_key.gpg  test_key_invalid.gpg
tests/assets/gpghome/: pubring.pgp  secring.pgp
tests/assets/password-store/: .gpg-id  test.gpg
tests/plugins/: CMakeLists.txt  TestGpg.cpp  TestPass.cpp
tests/plugins/TestsUtils/: CMakeLists.txt  passphraseprovider.h  plugin.cpp  plugin.h  qmldir  utils.cpp  utils.h
tests/unit/: tst_gpg.qml  tst_pass.qml  tst_utils.qml
tests/unit/assets/: not.key  public1.key
tests/units/: tst_git.qml  tst_utils.qml
tests/units/pass/: PassTestCase.qml  tst_get_keys.qml  tst_import_key.qml  tst_ls.qml  tst_show.qml
third/: CMakeLists.txt  clean.sh
